Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Smart EQ 453:
    add timebased Pre-heat/cool Control 
      - can set at Website -> Smart ED/EQ 4.Gen -> Climate/Heater 
      - at App Features #4: on = 1 off = 2, #5 time like 05:15 = 515, #6 5/10/15 Minutes = 0/1/2
    add GPS powersaving mode at parking
    add 12V alert raised, the car starts the 12V charging process for 15 Minutes
    add Network type switch, option to lock LTE only. Needed, when the Provider has no Datastream at GSM
- CAN: add error flag decoding (included in can status output)
  New commands:
    can <bus> explain [errorflags]    -- Decode error flags into human readable text 
- DBC Files
  Add unit support
- OVMS Server v3: Ability to define less frequent MQTT communication to save data charges and power
  Events:
    Excludes clock.* events from being published at the start of every minute.
  New configs:
    [server.v3] events.legacy_topic  -- Whether to publish every event on the legacy /event topic as well as
                                        the MQTT-style topic. Defaults to true to preserve existing behaviour.
                                        Recommended to set to false if you don't use the legacy topic.
    [server.v3] updatetime.keepalive -- Max number of seconds to allow the MQTT connection to be idle before
                                        sending PINGREQ. Should be set slightly shorter than the network's
                                        NAT timeout and the timeout of your MQTT server. If these are unknown
                                        you can use trial and error. Symptoms of keepalive being too high are
                                        a lack of metric updates after a certain point, or "Disconnected from
                                        OVMS Server V3" appearing in the log. In previous releases this used