@@ -74,7 +74,7 @@ const OvmsPoller::poll_pid_t vweup_polls[] = {
   // Same tick & order important of above 2: VWUP_BAT_MGMT_CELL_MIN calculates the delta
 
   {VWUP_BAT_MGMT, UDS_READ, VWUP_BAT_MGMT_TEMP,             {  0, 20, 20, 20}, 1, ISOTP_STD},
-  {VWUP_BAT_MGMT, UDS_READ, VWUP_BAT_MGMT_HIST18,           {  0, 20, 20, 20}, 1, ISOTP_STD},
+  //{VWUP_BAT_MGMT, UDS_READ, VWUP_BAT_MGMT_HIST18,           {  0, 20, 20, 20}, 1, ISOTP_STD}, // not yet implemented
   {VWUP_BAT_MGMT, UDS_READ, VWUP_BAT_MGMT_SOH_CAC,          {  0, 20, 20, 20}, 1, ISOTP_STD},
 
   {VWUP_CHG,      UDS_READ, VWUP_CHG_POWER_EFF,             {  0,  0, 10,  0}, 1, ISOTP_STD},
@@ -99,9 +99,9 @@ const OvmsPoller::poll_pid_t vweup_polls[] = {
   {VWUP_CHG_MGMT, UDS_READ, VWUP_CHG_MGMT_SOC_LIMITS,       {  0, 12, 12, 12}, 1, ISOTP_STD},
   // Note: m_timermode_ticker needs to be the polling interval for VWUP_CHG_MGMT_SOC_LIMITS + 1
   //  (see response handler for VWUP_CHG_MGMT_HV_CHGMODE)
-  {VWUP_CHG_MGMT, UDS_READ, VWUP_CHG_HEATER_I,              {  0, 20, 20, 20}, 1, ISOTP_STD},
   {VWUP_CHG_MGMT, UDS_READ, VWUP_CHG_SOCKET,                {  0,  5,  5,  5}, 1, ISOTP_STD},
-  {VWUP_CHG_MGMT, UDS_READ, VWUP_CHG_SOCK_STATS,            {  0, 20, 20, 20}, 1, ISOTP_STD},
+  //{VWUP_CHG_MGMT, UDS_READ, VWUP_CHG_HEATER_I,              {  0, 20, 20, 20}, 1, ISOTP_STD}, // not yet implemented
+  //{VWUP_CHG_MGMT, UDS_READ, VWUP_CHG_SOCK_STATS,            {  0, 20, 20, 20}, 1, ISOTP_STD}, // not yet implemented
 
   {VWUP_BRK,      UDS_SESSION, VWUP_EXTDIAG_START,          {  0,  0,  0, 30}, 1, ISOTP_STD},
   {VWUP_BRK,      UDS_READ, VWUP_BRK_TPMS,                  {  0,  0,  0, 30}, 1, ISOTP_STD},
@@ -199,6 +199,9 @@ void OvmsVehicleVWeUp::OBDInit()
       m_bat_soh_range  = new OvmsMetricFloat("xvu.b.soh.range", SM_STALE_MAX, Percentage, true);
     if (!(m_bat_soh_charge = (OvmsMetricFloat*)MyMetrics.Find("xvu.b.soh.charge")))
       m_bat_soh_charge = new OvmsMetricFloat("xvu.b.soh.charge", SM_STALE_MAX, Percentage, true);
+
+    // Battery cell SOH from ECU 8C PID 74 CB
+    m_bat_cell_soh = new OvmsMetricVector<float>("xvu.b.c.soh", SM_STALE_HIGH, Percentage);
 
     // Battery energy according to MFD range estimation:
     m_bat_energy_range  = MyMetrics.InitFloat("xvu.b.energy.range", SM_STALE_MAX, 0, kWh);
@@ -833,7 +836,7 @@ void OvmsVehicleVWeUp::IncomingPollReply(const OvmsPoller::poll_job_t &job, uint
             float soh_old = m_bat_soh_range->AsFloat();
             if (soh_new < soh_old)
               soh_new = (49 * soh_old + soh_new) / 50;
-            m_bat_soh_range->SetValue(soh_new);
+            m_bat_soh_range->SetValue(soh_new); // → MetricModified() → SetSOH()
             ESP_LOGD(TAG, "VWUP_MFD_RANGE_CAP: max=%.2fkWh => SOH=%.3f%%", m_bat_cap_range_hist[1], soh_new);
           }
         }
@@ -948,12 +951,21 @@ void OvmsVehicleVWeUp::IncomingPollReply(const OvmsPoller::poll_job_t &job, uint
       break;
 
     case VWUP_BAT_MGMT_SOH_CAC:
-      if (PollReply.FromInt16("VWUP_BAT_MGMT_SOH_CAC", value)) {
-//        StdMetrics.ms_v_bat_cac->SetValue(value / 100.0f);
+      if (PollReply.FromUint16("VWUP_BAT_MGMT_SOH_CAC", value, 0)) {
         float cac = value / 100.0f;
         float soh = value / ((vweup_modelyear > 2019) ? 120.0f : 50.0f);
-        m_bat_soh_vw->SetValue(soh);
+        m_bat_soh_vw->SetValue(soh); // → MetricModified() → SetSOH()
         VALUE_LOG(TAG, "VWUP_BAT_MGMT_SOH_CAC: %f => CAC=%f, SOH=%f", value, cac, m_bat_soh_vw->AsFloat());
+      }
+      if (PollReply.FromUint16("VWUP_BAT_MGMT_SOH_CAC", value, 2)) {
+        size_t cellcount = value;
+        std::vector<float> cellsoh(cellcount);
+        for (int i = 0; i < cellcount; i++) {
+          if (PollReply.FromUint8("VWUP_BAT_MGMT_SOH_CAC", value, 4 + i)) {
+            cellsoh[i] = ROUNDPREC(value / ((vweup_modelyear > 2019) ? 240.0f : 125.0f) * 100.0f, 1);
+          }
+        }
+        m_bat_cell_soh->SetValue(cellsoh);
       }
       break;
 
@@ -1330,12 +1342,14 @@ void OvmsVehicleVWeUp::IncomingPollReply(const OvmsPoller::poll_job_t &job, uint
       }
       break;
 
+#if 0
     case VWUP_BAT_MGMT_HIST18:
       // XXX OBD-Amigos: AC Ah: b21-b24, DC Ah: b29-b32, regen Ah: b5-b8, HV usage counter: U16(V2,V3), CCS usage counter: U16(V8,V9)
       break;
     case VWUP_CHG_HEATER_I:
       // XXX OBD-Amigos: V1/4
       break;
+#endif
     case VWUP_CHG_SOCKET: // XXX OBD-Amigos: b0: plugged, b1: locked, AC socket temp: U16(V3,V4)/10-55, DC socket temp: U16(V5,V6)/10-55
       if (PollReply.FromUint8("VWUP_CHG_SOCKET", ivalue)) {
         bool plugstate = ivalue & 0x01;
@@ -1353,9 +1367,11 @@ void OvmsVehicleVWeUp::IncomingPollReply(const OvmsPoller::poll_job_t &job, uint
         }
       }
       break;
+#if 0
     case VWUP_CHG_SOCK_STATS:
       // XXX OBD-Amigos: insertions: U16(V1,V2), lockings: U16(V3,V4)
       break;
+#endif
 
     default:
       VALUE_LOG(TAG, "IncomingPollReply: ECU %" PRIX32 "/%" PRIX32 " unhandled PID %02X %04X: %s",
@@ -1521,6 +1537,6 @@ void OvmsVehicleVWeUp::UpdateChargeCap(bool charging)
     }
 
     // Update metrics:
-    m_bat_soh_charge->SetValue(soh);
+    m_bat_soh_charge->SetValue(soh); // → MetricModified() → SetSOH()
   }
 }
