@@ -59,6 +59,7 @@ void OvmsVehicleVWeUp::WebInit()
     // only useful with OBD metrics:
     MyWebServer.RegisterPage("/xvu/metrics_charger", "Charging Metrics", WebDispChgMetrics, PageMenu_Vehicle, PageAuth_Cookie);
     MyWebServer.RegisterPage("/xvu/battmon", "Battery Monitor", OvmsWebServer::HandleBmsCellMonitor, PageMenu_Vehicle, PageAuth_Cookie);
+    MyWebServer.RegisterPage("/xvu/battsoh", "Battery Health", WebDispBattHealth, PageMenu_Vehicle, PageAuth_Cookie);
   }
 }
 
@@ -71,6 +72,7 @@ void OvmsVehicleVWeUp::WebDeInit()
   MyWebServer.DeregisterPage("/xvu/climate");
   MyWebServer.DeregisterPage("/xvu/metrics_charger");
   MyWebServer.DeregisterPage("/xvu/battmon");
+  MyWebServer.DeregisterPage("/xvu/battsoh");
 }
 
 /**
@@ -638,6 +640,191 @@ void OvmsVehicleVWeUp::WebDispChgMetrics(PageEntry_t &p, PageContext_t &c)
         "</div>" // receiver
       "</div>" // panel-body
     "</div>" // panel
+  );
+
+  PAGE_HOOK("body.post");
+  c.done();
+}
+
+
+/**
+ * WebPlugin to display battery health (SOH)
+ */
+void OvmsVehicleVWeUp::WebDispBattHealth(PageEntry_t &p, PageContext_t &c)
+{
+  int vweup_modelyear = MyConfig.GetParamValueInt("xvu", "modelyear", DEFAULT_MODEL_YEAR);
+  
+  c.head(200);
+  PAGE_HOOK("body.pre");
+
+  c.printf(
+    "<div class=\"panel panel-primary\">\n"
+      "<div class=\"panel-heading\">Battery Health</div>\n"
+      "<div class=\"panel-body\">\n"
+        "<div class=\"receiver\" id=\"receiver-battsoh\">\n"
+          "<table class=\"table table-bordered table-condensed\">\n"
+            "<tbody>\n"
+              "<tr>\n"
+                "<th>SOH</th>\n"
+                "<td>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"xvu.b.soh.vw\">\n"
+                  "<span class=\"label\">Official VW</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">%%</span>\n"
+                "</div>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"xvu.b.soh.charge\">\n"
+                  "<span class=\"label\">Charge capacity</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">%%</span>\n"
+                "</div>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"xvu.b.soh.range\">\n"
+                  "<span class=\"label\">Range estimation</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">%%</span>\n"
+                "</div>\n"
+                "</td>\n"
+              "</tr>\n"
+              "<tr>\n"
+                "<th>Ah</th>\n"
+                "<td>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.cac\">\n"
+                  "<span class=\"label\">Net capacity</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">Ah</span>\n"
+                "</div>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.coulomb.recd.total\">\n"
+                  "<span class=\"label\">Charged total</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">Ah</span>\n"
+                "</div>\n"
+                "<div class=\"metric number\" data-prec=\"0\" id=\"cycles-ah\">\n"
+                  "<span class=\"label\">Charge cycles</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\"></span>\n"
+                "</div>\n"
+                "</td>\n"
+              "</tr>\n"
+              "<tr>\n"
+                "<th>kWh</th>\n"
+                "<td>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.capacity\">\n"
+                  "<span class=\"label\">Net capacity</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">kWh</span>\n"
+                "</div>\n"
+                "<div class=\"metric number\" data-prec=\"1\" data-metric=\"v.b.energy.recd.total\">\n"
+                  "<span class=\"label\">Charged total</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\">kWh</span>\n"
+                "</div>\n"
+                "<div class=\"metric number\" data-prec=\"0\" id=\"cycles-kwh\">\n"
+                  "<span class=\"label\">Charge cycles</span>\n"
+                  "<span class=\"value\">0.0</span>\n"
+                  "<span class=\"unit\"></span>\n"
+                "</div>\n"
+                "</td>\n"
+              "</tr>\n"
+            "</tbody>\n"
+          "</table>\n"
+          "<h4>Cell Level</h4>\n"
+          "<div class=\"metric chart\" data-metric=\"xvu.b.c.soh,xvu.b.soh.vw\" style=\"width: 100%%; max-width: 100%%; height: 45vh; min-height: 280px; margin: 0 auto\">\n"
+            "<div class=\"chart-box barchart\" id=\"cell-soh\"/>\n"
+          "</div>\n"
+        "</div>\n"
+      "</div>\n"
+    "</div>\n"
+    "<style>\n"
+    ".metric.number {\n"
+      "display: flex;\n"
+      "align-items: baseline;\n"
+    "}\n"
+    ".metric.number .label {\n"
+      "min-width: 10em;\n"
+    "}\n"
+    ".metric.number .label:after {\n"
+      "content: ':';\n"
+    "}\n"
+    ".metric.number .value {\n"
+      "min-width: 5em;\n"
+    "}\n"
+    ".plot-line-packsoh {\n"
+      "stroke: #0074ff;\n"
+      "stroke-width: 2px;\n"
+    "}\n"
+    "</style>\n"
+    "<script>\n"
+    "(function(){\n"
+      "/* Car model properties */\n"
+      "var car = { cap_gross_ah: %.1f, cap_gross_kwh: %.1f };\n"
+      "/* Metrics derived displays */\n"
+      "$('#receiver-battsoh').on('msg:metrics', function(ev, upd) {\n"
+        "if (upd[\"v.b.coulomb.recd.total\"]) {\n"
+          "$(\"#cycles-ah .value\").text(Number(upd[\"v.b.coulomb.recd.total\"] / car.cap_gross_ah).toFixed(1));\n"
+        "}\n"
+        "if (upd[\"v.b.energy.recd.total\"]) {\n"
+          "$(\"#cycles-kwh .value\").text(Number(upd[\"v.b.energy.recd.total\"] / car.cap_gross_kwh).toFixed(1));\n"
+        "}\n"
+      "});\n"
+      "/* Init cell SOH chart */\n"
+      "$(\"#cell-soh\").chart({\n"
+        "chart: {\n"
+          "type: 'column',\n"
+          "animation: { duration: 500, easing: 'easeOutExpo' },\n"
+          "zoomType: 'xy',\n"
+          "panning: true,\n"
+          "panKey: 'ctrl',\n"
+        "},\n"
+        "title: { text: null },\n"
+        "credits: { enabled: false },\n"
+        "tooltip: {\n"
+          "enabled: true,\n"
+          "shared: true,\n"
+          "headerFormat: 'Cell #{point.key}:<br/>',\n"
+          "pointFormat: '{series.name}: <b>{point.y}</b><br/>',\n"
+          "valueSuffix: \" %%\"\n"
+        "},\n"
+        "legend: { enabled: true },\n"
+        "xAxis: {\n"
+          "categories: []\n"
+        "},\n"
+        "yAxis: [{\n"
+          "title: { text: null },\n"
+          "labels: { format: \"{value:.0f}%%\" },\n"
+          "min: 75, max: 100,\n"
+          "minTickInterval: 0.1,\n"
+          "minorTickInterval: 'auto',\n"
+        "}],\n"
+        "series: [{\n"
+          "name: 'SOH', data: [50],\n"
+          "className: 'cell-soh',\n"
+          "animation: { duration: 0 },\n"
+        "}],\n"
+        "/* Update method: */\n"
+        "onUpdate: function(update) {\n"
+          "let m_packsoh = metrics[\"xvu.b.soh.vw\"] || 100;\n"
+          "let m_cellsoh = metrics[\"xvu.b.c.soh\"] || [];\n"
+          "// Create categories (cell numbers) & rounded values:\n"
+          "let cat = [], val0 = [];\n"
+          "for (let i = 0; i < m_cellsoh.length; i++) {\n"
+            "cat.push(i+1);\n"
+            "val0.push(Number((m_cellsoh[i]||0).toFixed(1)));\n"
+          "}\n"
+          "// Update chart:\n"
+          "this.xAxis[0].setCategories(cat);\n"
+          "this.yAxis[0].removePlotLine('plot-line-packsoh');\n"
+          "this.yAxis[0].addPlotLine({ id: 'plot-line-packsoh', className: 'plot-line-packsoh', value: m_packsoh, zIndex: 3 });\n"
+          "this.series[0].setData(val0);\n"
+          "let yext = this.yAxis[0].getExtremes();\n"
+          "let ymin = Math.max(0, Math.floor((yext.dataMin-10) / 5) * 5);\n"
+          "let ymax = Math.min(100, Math.ceil((yext.dataMax+10) / 5) * 5);\n"
+          "this.yAxis[0].setExtremes(ymin, ymax);\n"
+        "},\n"
+      "});\n"
+    "})();\n"
+    "</script>\n",
+    /* Car model properties */
+    /* cap_gross_ah: */     (vweup_modelyear > 2019) ? 120.0 : 50.0,
+    /* cap_gross_kwh: */    (vweup_modelyear > 2019) ? 36.8 : 18.7
   );
 
   PAGE_HOOK("body.post");
