@@ -1,0 +1,181 @@
+<!--
+  Web page plugin: battery health
+  Source for /xvu/battsoh → OvmsVehicleVWeUp::WebDispBattHealth()
+-->
+
+<div class="panel panel-primary">
+  <div class="panel-heading">Battery Health</div>
+  <div class="panel-body">
+
+    <div class="receiver" id="receiver-battsoh">
+
+      <table class="table table-bordered table-condensed">
+        <tbody>
+          <tr>
+            <th>SOH</th>
+            <td>
+            <div class="metric number" data-prec="1" data-metric="xvu.b.soh.vw">
+              <span class="label">Official VW</span>
+              <span class="value">0.0</span>
+              <span class="unit">%</span>
+            </div>
+            <div class="metric number" data-prec="1" data-metric="xvu.b.soh.charge">
+              <span class="label">Charge capacity</span>
+              <span class="value">0.0</span>
+              <span class="unit">%</span>
+            </div>
+            <div class="metric number" data-prec="1" data-metric="xvu.b.soh.range">
+              <span class="label">Range estimation</span>
+              <span class="value">0.0</span>
+              <span class="unit">%</span>
+            </div>
+            </td>
+          </tr>
+          <tr>
+            <th>Ah</th>
+            <td>
+            <div class="metric number" data-prec="1" data-metric="v.b.cac">
+              <span class="label">Net capacity</span>
+              <span class="value">0.0</span>
+              <span class="unit">Ah</span>
+            </div>
+            <div class="metric number" data-prec="1" data-metric="v.b.coulomb.recd.total">
+              <span class="label">Charged total</span>
+              <span class="value">0.0</span>
+              <span class="unit">Ah</span>
+            </div>
+            <div class="metric number" data-prec="0" id="cycles-ah">
+              <span class="label">Charge cycles</span>
+              <span class="value">0.0</span>
+              <span class="unit"></span>
+            </div>
+            </td>
+          </tr>
+          <tr>
+            <th>kWh</th>
+            <td>
+            <div class="metric number" data-prec="1" data-metric="v.b.capacity">
+              <span class="label">Net capacity</span>
+              <span class="value">0.0</span>
+              <span class="unit">kWh</span>
+            </div>
+            <div class="metric number" data-prec="1" data-metric="v.b.energy.recd.total">
+              <span class="label">Charged total</span>
+              <span class="value">0.0</span>
+              <span class="unit">kWh</span>
+            </div>
+            <div class="metric number" data-prec="0" id="cycles-kwh">
+              <span class="label">Charge cycles</span>
+              <span class="value">0.0</span>
+              <span class="unit"></span>
+            </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h4>Cell Level</h4>
+
+      <div class="metric chart" data-metric="xvu.b.c.soh,xvu.b.soh.vw" style="width: 100%; max-width: 100%; height: 45vh; min-height: 280px; margin: 0 auto">
+        <div class="chart-box barchart" id="cell-soh"/>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<style>
+.metric.number {
+  display: flex;
+  align-items: baseline;
+}
+.metric.number .label {
+  min-width: 10em;
+}
+.metric.number .label:after {
+  content: ':';
+}
+.metric.number .value {
+  min-width: 5em;
+}
+.plot-line-packsoh {
+  stroke: #0074ff;
+  stroke-width: 2px;
+}
+</style>
+
+<script>
+(function(){
+
+  /* Car model properties */
+  var car = { cap_gross_ah: 120.0, cap_gross_kwh: 36.8 };
+
+  /* Metrics derived displays */
+  $('#receiver-battsoh').on('msg:metrics', function(ev, upd) {
+    if (upd["v.b.coulomb.recd.total"]) {
+      $("#cycles-ah .value").text(Number(upd["v.b.coulomb.recd.total"] / car.cap_gross_ah).toFixed(1));
+    }
+    if (upd["v.b.energy.recd.total"]) {
+      $("#cycles-kwh .value").text(Number(upd["v.b.energy.recd.total"] / car.cap_gross_kwh).toFixed(1));
+    }
+  });
+
+  /* Init cell SOH chart */
+  $("#cell-soh").chart({
+    chart: {
+      type: 'column',
+      animation: { duration: 500, easing: 'easeOutExpo' },
+      zoomType: 'xy',
+      panning: true,
+      panKey: 'ctrl',
+    },
+    title: { text: null },
+    credits: { enabled: false },
+    tooltip: {
+      enabled: true,
+      shared: true,
+      headerFormat: 'Cell #{point.key}:<br/>',
+      pointFormat: '{series.name}: <b>{point.y}</b><br/>',
+      valueSuffix: " %"
+    },
+    legend: { enabled: true },
+    xAxis: {
+      categories: []
+    },
+    yAxis: [{
+      title: { text: null },
+      labels: { format: "{value:.0f}%" },
+      min: 75, max: 100,
+      minTickInterval: 0.1,
+      minorTickInterval: 'auto',
+    }],
+    series: [{
+      name: 'SOH', data: [50],
+      className: 'cell-soh',
+      animation: { duration: 0 },
+    }],
+    /* Update method: */
+    onUpdate: function(update) {
+      let m_packsoh = metrics["xvu.b.soh.vw"] || 100;
+      let m_cellsoh = metrics["xvu.b.c.soh"] || [];
+      // Create categories (cell numbers) & rounded values:
+      let cat = [], val0 = [];
+      for (let i = 0; i < m_cellsoh.length; i++) {
+        cat.push(i+1);
+        val0.push(Number((m_cellsoh[i]||0).toFixed(1)));
+      }
+      // Update chart:
+      this.xAxis[0].setCategories(cat);
+      this.yAxis[0].removePlotLine('plot-line-packsoh');
+      this.yAxis[0].addPlotLine({ id: 'plot-line-packsoh', className: 'plot-line-packsoh', value: m_packsoh, zIndex: 3 });
+      this.series[0].setData(val0);
+      let yext = this.yAxis[0].getExtremes();
+      let ymin = Math.max(0, Math.floor((yext.dataMin-10) / 5) * 5);
+      let ymax = Math.min(100, Math.ceil((yext.dataMax+10) / 5) * 5);
+      this.yAxis[0].setExtremes(ymin, ymax);
+    },
+  });
+
+})();
+</script>
